--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 pyspark = "^3.4.0"
-dask = "^2023.4.0"
+dask = {extras = ["distributed"], version = "^2023.4.0"}
 fastparquet = "^2023.2.0"
 pandas = "^2.0.0"
 numpy = "^1.24.2"
