--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ numpy = "^1.24.2"
 jupyterlab = "^3.6.3"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^23.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
