--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ fastparquet = "^2023.2.0"
 pandas = "^2.0.0"
 numpy = "^1.24.2"
 jupyterlab = "^3.6.3"
+click = "^8.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
