--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.1.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.3.0"
+mypy = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
