--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^1.24.2"
 jupyterlab = "^3.6.3"
 click = "^8.1.3"
 setuptools = "^70.0.0"
+streamlit = "^1.35.0"
 
 
 [tool.poetry.group.dev.dependencies]
