--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jupyterlab = "^3.6.3"
 click = "^8.1.3"
 setuptools = "^70.0.0"
 streamlit = "^1.35.0"
+gradio = "^4.36.1"
 
 
 [tool.poetry.group.dev.dependencies]
